2009-10-20  Francois Suter  <francois@typo3.org>

	* Added feature #12187: Added more usage of flashmessages to EM (thanks to Steffen Gebert)

2009-10-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12273: List view don't show if there are more records than displayed
	* Follow-up to bug #10467: Added var "showRefreshLoginPopup" to config_default
	* Fixed bug #10467: AJAX relogin does not work
	* Added test #12286: Add unit tests for RemoveXSS

2009-10-20  Oliver Hader  <oliver@typo3.org>

	* Cleanup #12278: Move t3lib_matchCondition::whichDevice() to t3lib_utility_Client::getDeviceType()
	* Follow-up to test #12153: Added test cases for empty comparison in globalVar condition
	* Follow-up to bugfix #9779: Modified the limit argument in t3lib_div::trimExplode() to behave as the regular explode() function does
	* Raised saltedpasswords version from 0.9.0 to 0.9.1
	* Raised DBAL version from 0.9.22 to 0.9.23
	* Raised feeditadvanced from 0.1.0 to 0.1.1
	* Added feature #5613: Enable/integrate conditions in Page TSconfig
	* Follow-up to feature #5613: Added test cases for matching conditions
	* Fixed bug #11610: t3lib_transl8tools::translationInfo() should return also CType of the element (thanks to Michael Klapper)

2009-10-20  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #2314: When moving records the translation do not move with it (thanks to Tolleiv Nietsch)
	* Fixed bug #539: lang-children "get lost"(should be deleted) when deleting parent-record in default language (thanks to Tolleiv Nietsch)
	* Fixed bug #10081: t3lib_div must not die if a locallang file is not found (thanks to Franz Holzinger)
	* Fixed bug #12194: The filetree does not show whether a folder is write protected

2009-10-20  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 0.9.10

2009-10-19  Oliver Hader  <oliver@typo3.org>

	* Follow-up to test #12153: Fixed bug in language condition tests