@@ -1,6 +1,7 @@
 2009-10-20  Francois Suter  <francois@typo3.org>
 
 	* Added feature #12187: Added more usage of flashmessages to EM (thanks to Steffen Gebert)
+	* Fixed bug #12177: Scheduler: Corrected situation where a new single task with a creation date in the past would never run (thanks to Ingmar Schlecht)
 
 2009-10-20  Steffen Kamper  <info@sk-typo3.de>
 
